feat(hisotry): complete done all history detection endpoint functionality
